--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-slot-counter": "^2.2.5",
+    "resend": "^4.1.2",
     "sharp": "^0.33.2",
     "swiper": "^11.0.5"
   },
